// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DebugPanel Component Tests > renders radio buttons for search sources 1`] = `
<div
  class="sc-irLvIq hkeVyu"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-csKJxZ ilyJmt"
  >
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-ailab"
        type="radio"
        value="ailab"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        checked=""
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-llama"
        type="radio"
        value="llama"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab Llama Search
      </span>
    </label>
  </div>
</div>
`;

exports[`DebugPanel Component Tests > selects no radio button when VITE_SEARCH_SOURCE has a bad value 1`] = `
<div
  class="sc-irLvIq hkeVyu"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-csKJxZ ilyJmt"
  >
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-ailab"
        type="radio"
        value="ailab"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-llama"
        type="radio"
        value="llama"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab Llama Search
      </span>
    </label>
  </div>
</div>
`;

exports[`DebugPanel Component Tests > selects the "AI Lab Llama" radio button when VITE_SEARCH_SOURCE is llama 1`] = `
<div
  class="sc-irLvIq hkeVyu"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-csKJxZ ilyJmt"
  >
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-ailab"
        type="radio"
        value="ailab"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        checked=""
        data-testid="search-source-llama"
        type="radio"
        value="llama"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab Llama Search
      </span>
    </label>
  </div>
</div>
`;

exports[`DebugPanel Component Tests > selects the "AI Lab" radio button when VITE_SEARCH_SOURCE is ailab 1`] = `
<div
  class="sc-irLvIq hkeVyu"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-csKJxZ ilyJmt"
  >
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        checked=""
        data-testid="search-source-ailab"
        type="radio"
        value="ailab"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-llama"
        type="radio"
        value="llama"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab Llama Search
      </span>
    </label>
  </div>
</div>
`;

exports[`DebugPanel Component Tests > selects the "Azure AI" radio button when VITE_SEARCH_SOURCE is azure 1`] = `
<div
  class="sc-irLvIq hkeVyu"
  data-testid="debug-panel"
>
  <h4
    style="color: black;"
  >
    Debug Panel
  </h4>
  <div
    class="sc-csKJxZ ilyJmt"
  >
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-ailab"
        type="radio"
        value="ailab"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        checked=""
        data-testid="search-source-azure"
        type="radio"
        value="azure"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use Azure AI Search
      </span>
    </label>
    <label
      class="sc-eTNRI cNqKFl"
    >
      <input
        data-testid="search-source-llama"
        type="radio"
        value="llama"
      />
      <span
        class="sc-brSamD fpMuCT"
      >
        Use AI Lab Llama Search
      </span>
    </label>
  </div>
</div>
`;
